<?xml version="1.0"?>
<package format="2">
  <name>joint_states_listener</name>
  <version>0.0.0</version>
  <description>Joint States Listener</description>

  <maintainer email="tarasradio@mail.ru">Pavel Tarasov</maintainer>

  <license>MIT</license>

  <author email="tarasradio@mail.ru">Pavel Tarasov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
	<build_depend>message_runtime</build_depend>
	<exec_depend>message_generation</exec_depend>
	<exec_depend>message_runtime</exec_depend>
  
  <export>
  </export>
</package>
